# Notes_site_10_django

./: README.md  pyproject.toml
notes/noteapp/: urls.py  views.py
notes/noteapp/migrations/: 0001_initial.py
notes/noteapp/templates/noteapp/: detail.html  index.html
notes/notes/: settings.py  urls.py
